# pulp-configs

./: .gitignore  CMakeLists.txt  Makefile  SConstruct
CMake/: FindAddJsonTools.cmake  FindPythonModule.cmake
configs/: defaults.json  gap_system.json  hero-z-7045.json  hero-zc706.json  hero-zc706_system.json  vivosoc3_system.json  wolfe_system.json
configs/boards/: ai_deck.json  gapoc_a.json  gapoc_a_spi.json  gapoc_a_spi_revb.json  gapuino.json  gapuino_revb.json  gapuino_revc.json  gapuino_spi.json  gapuino_spi_revb.json  gapuino_spi_revc.json  lucy.json
configs/chips/arnold/: arnold.json  chip.json  defaults.json  padframe.json  soc.json  system.json  udma.json
configs/chips/bigpulp/: bigpulp.json  chip.json  defaults.json  soc.json  system.json
configs/chips/bigpulp-juno/: bigpulp-juno.json  chip.json  cluster_0.json  cluster_1.json  cluster_2.json  cluster_3.json  defaults.json  soc.json  system.json
configs/chips/bigpulp-standalone/: bigpulp.json  chip.json  cluster_0.json  soc.json  system.json
configs/chips/bigpulp-z-7045/: bigpulp-z-7045.json  chip.json  defaults.json  soc.json  system.json
configs/chips/bigpulp-zu9eg/: bigpulp-zu9eg.json  chip.json  cluster_0.json  cluster_1.json  soc.json  system.json
configs/chips/gap/: apb_soc.json  chip.json  cluster_0.json  defaults.json  gap.json  padframe.json  soc.json  system.json  udma.json
configs/chips/gap8_revc/: defaults.json  gap8_revc.json
configs/chips/gap9/: gap9.json  pmu.json  udma.json
configs/chips/gap9_v2/: apb_soc.json  gap9_v2.json  udma.json
configs/chips/gap_rev1/: apb_soc.json  chip.json  cluster_0.json  defaults.json  gap_rev1.json  padframe.json  soc.json  system.json
configs/chips/hero-z-7045/: chip.json  defaults.json  soc.json  system.json
configs/chips/mempool/: apb_soc.json  mempool.json  udma.json
configs/chips/multino/: chip.json  cluster_0.json  cluster_1.json  defaults.json  multino.json  padframe.json  soc.json  system.json
configs/chips/oprecompkw/: chip.json  oprecompkw.json  soc.json  system.json
configs/chips/oprecompkw_sa/: chip.json  cluster_0.json  oprecompkw_sa.json  soc.json  system.json
configs/chips/oprecompkw_sfloat/: chip.json  cluster_0.json  oprecompkw_sfloat.json  soc.json  system.json
configs/chips/oprecompkw_sfloat_sa/: chip.json  cluster_0.json  oprecompkw_sfloat_sa.json  soc.json  system.json
configs/chips/oprecompkw_sfloat_sa_dual_regfile/: chip.json  cluster_0.json  oprecompkw_sfloat_sa_dual_regfile.json  system.json
configs/chips/pulp/: chip.json  cluster_0.json  defaults.json  padframe.json  pulp.json  pulp_16.json  pulp_rnnext.json  soc.json  system.json  udma.json
configs/chips/pulp_v1/: padframe.json  pulp_v1.json  udma.json
configs/chips/pulpissimo/: chip-microriscy.json  chip-riscy.json  chip-zeroriscy.json  chip.json  defaults.json  padframe.json  pulpissimo.json  pulpissimo_ibex.json  pulpissimo_rnnext.json  soc-microriscy.json  soc-riscy.json  soc-zeroriscy.json  soc.json  system-microriscy.json  system-riscy.json  system-zeroriscy.json  system.json  udma.json
configs/chips/pulpissimo-microriscy/: chip.json  pulpissimo-microriscy.json  soc.json  system.json
configs/chips/pulpissimo-riscy/: chip.json  fc_irq.json  pulpissimo-riscy.json  soc.json  soc_events.json  system.json
configs/chips/pulpissimo-zeroriscy/: chip.json  pulpissimo-zeroriscy.json  soc.json
configs/config/: pulp_16.json
configs/devices/: camera.json  eeprom.json  hyper.json  i2s_microphone.json  jtag_proxy.json  lcd_ili9341.json  lcd_ili9341.rst  spiflash.json  spim_verif.json  uart_tb.json
configs/ips/: cluster_v5_a.json  eu_v3.json  fll_v1.json  microriscy.json  ri5ky_v2_a.json  ri5ky_v2_cplx.json  ri5ky_v2_sfloat.json  ri5ky_v2_sfloat_single_regfile.json  zeroriscy.json
configs/periph/: uart_tb.json
configs/systems/: arnold.json  bigpulp-juno.json  bigpulp-standalone.json  bigpulp-z-7045.json  bigpulp-zu9eg.json  bigpulp.json  fulmine.json  gap.json  gap_rev1.json  hero-z-7045.json  hero-zc706.json  honey.json  multino.json  neuraghe.json  oprecompkw.json  oprecompkw_sa.json  oprecompkw_sfloat.json  oprecompkw_sfloat_sa.json  oprecompkw_sfloat_sa_dual_regfile.json  pulp.json  pulpissimo-microriscy.json  pulpissimo-riscy.json  pulpissimo-zeroriscy.json  pulpissimo.json  pulpissimo_v2.json  quentin.json  usoc_v1.json  vega.json  vivosoc2.json  vivosoc2_1.json  vivosoc3.json  vivosoc3_5.json  wolfe.json
configs/usecases/: jtag-cam-spi.json  jtag-cam.json  jtag-nouart.json  jtag.json
generators/: comp_gen.py  pulp_chip_gen  pulp_soc_gen  pulp_system_gen  pulp_top_gen  pulp_usecase_gen
python/: pulp_config.py
templates/oprecompkw/: soc.json
templates/pulp/: soc.json
templates/pulpissimo/: soc-microriscy.json  soc-riscy.json  soc-zeroriscy.json  soc.json
templates/vega/: soc.json
templates/wolfe/: soc.json
(+146 files in other folders)
